<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activists.RegisterActivity">

    <TextView
        android:id="@+id/td_register"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/userName"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/td_register" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nickName"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/phone"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/password"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/td_sex"
        app:layout_constraintTop_toBottomOf="@+id/td_sex" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/confirmpassword"
        android:textColor="@color/snow"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/captcha"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/td_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sex"
        android:textColor="@color/snow"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/ed_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请输入账号"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <EditText
        android:id="@+id/ed_nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请输入昵称"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/ed_account"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请输入密码"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/ed_nickName"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <EditText
        android:id="@+id/ed_passwordtwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请再确认一次"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <EditText
        android:id="@+id/ed_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请输入手机号"
        android:inputType="phone"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="@+id/ed_passwordtwo"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <EditText
        android:id="@+id/ed_captche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_biankuang"
        android:ems="10"
        android:hint="请输入验证码"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/ed_phone"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <ImageView
        android:id="@+id/image_captche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/ed_captche"
        app:layout_constraintTop_toBottomOf="@+id/ed_captche"
        app:srcCompat="@drawable/back_biankuang" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/retangletextshape"
        android:text="@string/register"
        android:textColor="@color/azure"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_captche" />

    <RadioGroup
        android:id="@+id/group_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/ed_nickName"
        app:layout_constraintTop_toTopOf="@+id/td_sex">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="男" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:text="女" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>