<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".activists.LoginActivity">

    <TextView
        android:id="@+id/td_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="228dp"
        android:text="@string/userName"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/userPassword"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/td_user"
        app:layout_constraintTop_toBottomOf="@+id/td_user" />

    <EditText
        android:id="@+id/edUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/kongbshape"
        android:ems="10"
        android:hint="请输入账号"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/td_user"
        app:layout_constraintStart_toEndOf="@+id/td_user"
        app:layout_constraintTop_toTopOf="@+id/td_user" />

    <EditText
        android:id="@+id/edPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/kongbshape"
        android:ems="10"
        android:hint="请输入密码"
        android:inputType="textPassword"
        android:maxLength="16"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/retangletextshape"
        android:text="@string/login"
        android:textColor="@color/aliceblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassWord"
        tools:textSize="24sp" />

    <TextView
        android:id="@+id/td_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:clickable="true"
        android:text="@string/register"
        android:textColor="@color/aquamarine"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/image_touxiang"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/touxiang" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="没有账号?试试其他账号"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <CheckBox
        android:id="@+id/rememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/RememberPassword"
        android:textColor="@color/darkturquoise"
        app:layout_constraintEnd_toEndOf="@+id/edPassWord"
        app:layout_constraintTop_toBottomOf="@+id/edPassWord" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#bfbfbf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/login_qq"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/icon_qq" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/login_qq"
        app:layout_constraintTop_toTopOf="@+id/login_qq"
        app:srcCompat="@drawable/weixin" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:srcCompat="@drawable/weibo" />
</androidx.constraintlayout.widget.ConstraintLayout>