<?xml version="1.0" encoding="utf-8"?>

<!--抽屉菜单-->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:context=".activists.PersonalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.youth.banner.Banner
            android:id="@+id/banner_person"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:image_scale_type="fit_xy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/img_touxiang"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="44dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/touxiang" />

        <ImageView
            android:id="@+id/img_shezhi"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/caidan" />

        <TextView
            android:id="@+id/td_dologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/dologin"
            android:textColor="@color/coral"
            android:textSize="18dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/img_touxiang"
            app:layout_constraintStart_toEndOf="@+id/img_touxiang" />

        <TextView
            android:id="@+id/td_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/name"
            android:textColor="@color/coral"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/img_touxiang"
            app:layout_constraintTop_toTopOf="@+id/img_touxiang" />

        <TextView
            android:id="@+id/td_qianming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="点击设置签名..."
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/img_touxiang"
            app:layout_constraintStart_toStartOf="@+id/td_name" />

        <GridView
            android:id="@+id/grid_geren"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:columnWidth="156px"
            android:horizontalSpacing="5px"
            android:numColumns="5"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_touxiang" />

        <ListView
            android:id="@+id/list_geren"
            android:layout_width="414dp"
            android:layout_height="437dp"
            android:layout_marginTop="16dp"
            android:dividerHeight="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid_geren" />

        <ImageView
            android:id="@+id/img_qianming"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintStart_toEndOf="@+id/td_qianming"
            app:layout_constraintTop_toTopOf="@+id/td_qianming"
            app:srcCompat="@drawable/qianming"
            tools:visibility="gone" />

        <Button
            android:id="@+id/bt_quit"
            android:layout_width="400dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonshape"
            android:text="@string/tuichu"
            android:textSize="18dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_geren" />

        <include
            android:id="@+id/include"
            layout="@layout/daohang_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="156dp"
            android:src="@drawable/guanzhu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/vip_on"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="关注"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="vip"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/right_drawer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_gravity="end"
        android:background="@drawable/retangle"
        android:choiceMode="singleChoice"
        android:dividerHeight="1dp" />

</androidx.drawerlayout.widget.DrawerLayout>

